--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<html>
+  <head>
+  <title>Portifolio</title>
+  <link href="style.css" rel="stylesheet">
+  <script src="script.js"></script>
+</head>
 <div class="container">
   <header class="cabecalho">
     <div class="perfil">
@@ -53,3 +59,4 @@
     </div>
   </main>
 </div>
+</hmtl>
